--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     height: 100vh; 
     text-align: center;
-    background: url(images/lab\ 2.JPG) no-repeat center center/ cover;
+    background: url(lab\ 2.JPG) no-repeat center center/ cover;
 }
 
 .container {
